# OU-22971-Toolbox

./: .gitignore  README.md  artifact.json
Ray/: README.md  (+2 more)
Ray/4_ray_capstone_project/: .gitignore  Dockerfile  README.md  demo.sh  demo_walkthrough.txt  design_doc.md  docker-compose.yml  environment.yml  main.py  prepare.py  pyproject.toml  pytest.ini  run.py
Ray/4_ray_capstone_project/output_examples/: README.md  demo.txt  test_ray_flow.txt
Ray/4_ray_capstone_project/output_examples/prepared/: active_zones.json  baseline.parquet  prep_meta.json  replay.parquet
Ray/4_ray_capstone_project/scripts/: download_data.ps1  download_data.sh  install.sh  reset.py  reset_ray.ps1  reset_ray.sh
Ray/4_ray_capstone_project/scripts/bash/: install.sh  uninstall.sh
Ray/4_ray_capstone_project/scripts/powershell/: download_data.ps1  install.ps1  reset_ray.ps1  uninstall.ps1
Ray/4_ray_capstone_project/src/: __init__.py  artifacts.py  common.py  core.py  data_preparation.py  logger.py  prepare.py  reset.py  run.py  scoring_task.py  tlc.py  tlc_lib.py  zone_actor.py  zone_subactor.py
Ray/4_ray_capstone_project/src/replay/: __init__.py  asynchronous.py  base.py  blocking.py  core.py  delayed.py  scoring.py  subactor.py
Ray/4_ray_capstone_project/tests/: README.md  conftest.py  helpers.py  reset.sh  reset_ray.sh  test_core_logic.py  test_data_validation.py  test_flow.sh  test_integration.py  test_ray_capstone_project.py  test_ray_docker.py  test_ray_flow.ps1  test_ray_flow.sh  test_ray_project.py  test_stretch_goals.py  test_tlc_replay.py  test_workflows.py  test_zone_actor.py
(+245 files in other folders)
