[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ray-capstone"
version = "0.1.0"
description = "Ray distributed computing capstone project for TLC demand replay"
requires-python = ">=3.10"
dependencies = [
    "ray",
    "pandas",
    "pyarrow",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
]

[tool.setuptools.packages.find]
include = ["src*"]

[project.scripts]
prepare = "src.prepare:main"
run = "src.run:main"
reset = "scripts.reset:reset_ray"

[tool.pytest.ini_options]
pythonpath = ["."]
